--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-streamlit==1.25.0  # Versión de Streamlit (ajusta según tu entorno)
-openai==0.27.8  # Biblioteca para interactuar con la API de OpenAI
-gtts==2.3.2  # Biblioteca para convertir texto a voz
+streamlit>=1.20.0
+plotly>=5.15.0
+pandas>=1.3.0
+numpy>=1.20.0
+openai==0.28
+python-dotenv>=0.21.0  
